--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,7 +1,4 @@
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,600;0,6..12,700;0,6..12,800;1,6..12,400;1,6..12,600;1,6..12,700;1,6..12,800&display=swap" rel="stylesheet">
-<meta property="og:description" content="Akamai Design System" />
-<meta property="og:title" content="Akamai Design System" />
-<!-- <meta property="og:image" content="unfurl with something" /> -->
 <title>Akamai Design System</title>
 <style>
   body {
@@ -18,7 +15,12 @@
     color: #f8971d;
   }
 
-  #storybook-explorer-menu .sidebar-subheading > button[aria-expanded="true"],
+  #storybook-explorer-menu [aria-label="Expand"],
+  #storybook-explorer-menu [aria-label="Collapse"] {
+    display: none;
+  }
+
+  #storybook-explorer-menu .sidebar-subheading > button,
   #storybook-explorer-menu .sidebar-subheading > button:focus,
   #storybook-explorer-menu .sidebar-subheading a[data-selected]:hover {
     background-color: #0196d6;
