--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,12 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,600;0,6..12,700;0,6..12,800;1,6..12,400;1,6..12,600;1,6..12,700;1,6..12,800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600;700&family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,600;0,6..12,700;0,6..12,800;1,6..12,400;1,6..12,600;1,6..12,700;1,6..12,800&display=swap" rel="stylesheet">
+<meta property="og:description" content="Akamai Design System" />
+<meta property="og:title" content="Akamai Design System" />
+<!-- <meta property="og:image" content="unfurl with something" /> -->
+<link rel="stylesheet" href="/fonts.css" />
+
+<style>
+  body {
+    font-family: "LatoWeb", sans-serif;
+    font-size: 16px;
+    color: #333;
+  }
+</style>
