--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -24,7 +24,10 @@
   #storybook-explorer-menu .sidebar-subheading > button:focus,
   #storybook-explorer-menu .sidebar-subheading a[data-selected]:hover {
     background-color: #0196d6;
-    color: #fff
+    color: #fff;
+    height: auto;
+    padding: 4px 8px;
+    letter-spacing: initial;
   }
 
   #storybook-explorer-menu .sidebar-subheading > button svg path {
